Rudimentary navbar and logo added

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -17,7 +17,7 @@
   </head>
   
   <body>
-	<div class="container-fluid" id="nav_bar"></div>
+    <div style="width:100%; margin-bottom:100px;" id="nav_bar"></div>
 	<div style="width:100%;" id="content"></div>
 
     <script>
@@ -31,7 +31,10 @@
     <script type="text/javascript" src="../target/scala-2.12/frontend-fastopt.js"></script>
 
 
-    <div class="jumbotron jumbo-dark horizontal-center" style="margin-top: 20px;">
+    <div class="jumbotron jumbo-dark horizontal-center" style="position: relative; margin-top: 20px;">
+        <a href="https://github.com/you">
+            <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
+        </a>
 
         <br>
         <!-- Disclaimer -->
@@ -40,14 +43,14 @@
                 <span>Hinweis/Disclaimer</span>
             </h3>
             <p>
-                Diese Website richtet sich speziell an Studenten der Homöopathie bzw. professionelle Homöopathen für Übungszwecke.
+                Diese Website richtet sich speziell an Studenten der Homöopathie bzw. professionelle Homöopathen und ist ausschließlich für Übungszwecke gedacht.
                 Sie ist nicht geeignet zur Selbstmedikation oder ersetzt den Besuch eines Arztes oder Apothekers.
                 Die Wirksamkeit von Homöopathie ist wissenschaftlich nicht bewiesen.
                 Der Autor dieser Website übernimmt keine Verantwortung für die Richtigkeit der Ergebnisse oder die Folgen, die aus einem unsachgemäßen Gebrauch resultieren.
             </p>
 
             <p>
-                This web site is intended for students of homeopathy or professional homeopaths.
+                This web site is intended for students of homeopathy or professional homeopaths as a training tool only.
                 It is not suitable for self-medication or can replace the visit of a medical doctor/GP.
                 Scientifically, homeopathy was never reliably proven to work.
                 The author of this web site does not take responsibility for the correctness of this sites' results or the consequences of misusing them.
@@ -57,7 +60,14 @@
         <!-- sources -->
         <!--<div style="line-height:1;"><a style="color:white;" href="#">Impressum</a></div>-->
         <!--<br>-->
-        <div>Copyright (c) 2018 <a style="color:white;" href="mailto:baueran@gmail.com">Andreas Bauer</a>
+        <div>
+            <a style="color:white;" href="#">Impressum</a>
+            |
+            <a style="color:white;" href="#">Contact</a>
+            |
+            <a style="color:white;" href="#">Terms and conditions</a>
+            |
+            <a style="color:white;" href="#">Cookie policy</a>
         </div>
     </div>
 
