--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -13,63 +13,23 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="mystyle.css">
 
-    <title>frep &mdash; homeopathic repertorisation</title>
+    <title>OOREP &mdash; open online homeopathic repertorisation</title>
   </head>
   
   <body>
-    <div style="width:100%; margin-bottom:100px;" id="nav_bar"></div>
-	<div style="width:100%;" id="content"></div>
-
     <script>
     $(function () {
       $('[data-toggle="tooltip"]').tooltip()
     })
     </script>
 
+    <div style="width:100%; margin-bottom:100px;" id="nav_bar"></div>
+    <div style="width:100%;" id="content"></div>
+    <div style="width:100%;" id="content_bottom"></div>
+
     <!-- Include Scala.js compiled code -->
     <script type="text/javascript" src="../target/scala-2.12/frontend-jsdeps.js"></script>
     <script type="text/javascript" src="../target/scala-2.12/frontend-fastopt.js"></script>
-
-
-    <div class="jumbotron jumbo-dark horizontal-center" style="position: relative; margin-top: 20px;">
-        <a href="https://github.com/you">
-            <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
-        </a>
-
-        <br>
-        <!-- Disclaimer -->
-        <div style="font-size:11px; max-width:700px;">
-            <h3 style="text-align:center; margin-bottom: 10px">
-                <span>Hinweis/Disclaimer</span>
-            </h3>
-            <p>
-                Diese Website richtet sich speziell an Studenten der Homöopathie bzw. professionelle Homöopathen und ist ausschließlich für Übungszwecke gedacht.
-                Sie ist nicht geeignet zur Selbstmedikation oder ersetzt den Besuch eines Arztes oder Apothekers.
-                Die Wirksamkeit von Homöopathie ist wissenschaftlich nicht bewiesen.
-                Der Autor dieser Website übernimmt keine Verantwortung für die Richtigkeit der Ergebnisse oder die Folgen, die aus einem unsachgemäßen Gebrauch resultieren.
-            </p>
-
-            <p>
-                This web site is intended for students of homeopathy or professional homeopaths as a training tool only.
-                It is not suitable for self-medication or can replace the visit of a medical doctor/GP.
-                Scientifically, homeopathy was never reliably proven to work.
-                The author of this web site does not take responsibility for the correctness of this sites' results or the consequences of misusing them.
-            </p>
-        </div>
-        <br>
-        <!-- sources -->
-        <!--<div style="line-height:1;"><a style="color:white;" href="#">Impressum</a></div>-->
-        <!--<br>-->
-        <div>
-            <a style="color:white;" href="#">Impressum</a>
-            |
-            <a style="color:white;" href="#">Contact</a>
-            |
-            <a style="color:white;" href="#">Terms and conditions</a>
-            |
-            <a style="color:white;" href="#">Cookie policy</a>
-        </div>
-    </div>
 
   </body>
 </html>
