New sec_frontend; move html/ to shared/

--- a/shared/html/public/index.html
+++ b/shared/html/public/index.html
@@ -28,8 +28,8 @@
     <div style="width:100%;" id="content_bottom"></div>
 
     <!-- Include Scala.js compiled code -->
-    <script type="text/javascript" src="../target/scala-2.12/frontend-jsdeps.js"></script>
-    <script type="text/javascript" src="../target/scala-2.12/frontend-fastopt.js"></script>
+    <script type="text/javascript" src="../../../frontend/target/scala-2.12/frontend-jsdeps.js"></script>
+    <script type="text/javascript" src="../../../frontend/target/scala-2.12/frontend-fastopt.js"></script>
 
   </body>
 </html>
