--- a/backend/public/html/public/login.html
+++ b/backend/public/html/public/login.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="mystyle.css">
-    <link href="signin.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://localhost:9000/assets/html/third-party/bootstrap-4.1.3/css/bootstrap.min.css">
+    <script src="http://localhost:9000/assets/html/third-party/jquery-3.3.1.min.js"></script>
+    <script src="http://localhost:9000/assets/html/third-party/popper.min.js"></script>
+    <script src="http://localhost:9000/assets/html/third-party/bootstrap-4.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="http://localhost:9000/assets/html/public/mystyle.css">
+    <link rel="stylesheet" href="http://localhost:9000/assets/html/public/signin.css">
 
     <title>OOREP &mdash; Login</title>
 </head>
