--- a/backend/public/html/private/index.html
+++ b/backend/public/html/private/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="http://localhost:9000/assets/html/third-party/bootstrap-4.1.3/css/bootstrap.min.css">
+    <script src="http://localhost:9000/assets/html/third-party/jquery-3.3.1.min.js"></script>
+    <script src="http://localhost:9000/assets/html/third-party/popper.min.js"></script>
+    <script src="http://localhost:9000/assets/html/third-party/bootstrap-4.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="http://localhost:9000/assets/html/private/mystyle.css">
 
     <title>OOREP &mdash; open online homeopathic repertorisation</title>
   </head>
@@ -28,8 +28,9 @@
     <div style="width:100%;" id="content_bottom"></div>
 
     <!-- Include Scala.js compiled code -->
-    <script type="text/javascript" src="../../../sec_frontend/target/scala-2.12/frontend-jsdeps.js"></script>
-    <script type="text/javascript" src="../../../sec_frontend/target/scala-2.12/frontend-fastopt.js"></script>
+    <script type="text/javascript" src="http://localhost:9000/assets/javascripts/frontend-priv-fastOpt.js"></script>
+    <!--<script type="text/javascript" src="../../../sec_frontend/target/scala-2.12/frontend-jsdeps.js"></script>-->
+    <!--<script type="text/javascript" src="../../../sec_frontend/target/scala-2.12/frontend-fastopt.js"></script>-->
 
   </body>
 </html>
