--- a/backend/public/html/private/index.html
+++ b/backend/public/html/private/index.html
@@ -11,6 +11,7 @@
     <script src="http://localhost:9000/assets/html/third-party/jquery-3.3.1.min.js"></script>
     <script src="http://localhost:9000/assets/html/third-party/popper.min.js"></script>
     <script src="http://localhost:9000/assets/html/third-party/bootstrap-4.1.3/js/bootstrap.min.js"></script>
+    <link  rel="stylesheet" href="http://localhost:9000/assets/html/third-party/open-iconic-master/font/css/open-iconic-bootstrap.css">
     <link rel="stylesheet" href="http://localhost:9000/assets/html/private/mystyle.css">
 
     <title>OOREP &mdash; open online homeopathic repertorisation</title>
