First attempt at a landing page...

--- a/backend/public/html/private/index.html
+++ b/backend/public/html/private/index.html
@@ -24,14 +24,14 @@
     })
     </script>
 
-    <div style="width:100%; margin-bottom:100px;" id="nav_bar"></div>
-    <div style="width:100%;" id="content"></div>
-    <div style="width:100%;" id="content_bottom"></div>
+    <!--<div style="width:100%; margin-bottom:100px;" id="nav_bar"></div>-->
+    <!--<div style="width:100%;" id="content"></div>-->
+    <!--<div style="width:100%;" id="content_bottom"></div>-->
 
     <!-- Include Scala.js compiled code -->
-    <script type="text/javascript" src="http://localhost:9000/assets/javascripts/frontend-priv-fastOpt.js"></script>
     <!--<script type="text/javascript" src="../../../sec_frontend/target/scala-2.12/frontend-jsdeps.js"></script>-->
     <!--<script type="text/javascript" src="../../../sec_frontend/target/scala-2.12/frontend-fastopt.js"></script>-->
+    <script type="text/javascript" src="http://localhost:9000/assets/javascripts/frontend-priv-fastOpt.js"></script>
 
   </body>
 </html>
