--- a/backend/public/html/login.html
+++ b/backend/public/html/login.html
@@ -11,8 +11,8 @@
     <script src="http://localhost:9000/assets/html/third-party/jquery-3.3.1.min.js"></script>
     <script src="http://localhost:9000/assets/html/third-party/popper.min.js"></script>
     <script src="http://localhost:9000/assets/html/third-party/bootstrap-4.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="http://localhost:9000/assets/html/public/mystyle.css">
-    <link rel="stylesheet" href="http://localhost:9000/assets/html/public/signin.css">
+    <link rel="stylesheet" href="http://localhost:9000/assets/html/mystyle.css">
+    <link rel="stylesheet" href="http://localhost:9000/assets/html/signin.css">
 
     <title>OOREP &mdash; Login</title>
 </head>
