Cosmetic fixes; smooth scrolling

--- a/backend/public/html/login.html
+++ b/backend/public/html/login.html
@@ -21,7 +21,7 @@
 
 <div style="width:100%; margin-bottom:100px;" class="text-center">
     <form class="form-signin" action="http://localhost:9000/login" method="POST">
-        <img src="logo_small.png">
+        <img src="img/logo_small.png">
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required>
