Towards pricing and faq

--- a/backend/public/html/pricing.html
+++ b/backend/public/html/pricing.html
@@ -1,41 +1,31 @@
-<!doctype html>
+<div class="container" style="padding-top:200px; padding-bottom:200px">
+    <div class="row">
+        <h1 class="text-center" style="margin-bottom:25px">
+            <img src="img/logo_small.png" alt="OOREP">
+            &mdash;
+            Pricing
+        </h1>
 
-<html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="http://localhost:9000/assets/html/third-party/bootstrap-4.1.3/css/bootstrap.min.css">
-    <script src="http://localhost:9000/assets/html/third-party/jquery-3.3.1.min.js"></script>
-    <script src="http://localhost:9000/assets/html/third-party/popper.min.js"></script>
-    <script src="http://localhost:9000/assets/html/third-party/bootstrap-4.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="http://localhost:9000/assets/html/mystyle.css">
-    <link rel="stylesheet" href="http://localhost:9000/assets/html/signin.css">
-
-    <title>OOREP &mdash; Login</title>
-</head>
-
-<body class="text-center">
-
-<div style="width:100%; margin-bottom:100px;" class="text-center">
-    <form class="form-signin" action="http://localhost:9000/login" method="POST">
-        <img src="img/logo_small.png">
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox mb-3">
-            <label><input type="checkbox" value="remember-me"> Remember me</label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <p class="mt-5 mb-3 text-muted">
-            <a href="#">Forgot your username or password?</a>
+        <p>
+            OOREP is free software (for details, see also the FAQ) and as such, everyone can check out its git
+            repository, run or modify the code.
         </p>
-    </form>
-</div>
 
-</body>
-</html>
+        <p>
+            However, I have decided to offer a subscription service with OOREP in the future, which lets users access
+            further repertories that I am not currently offering on git.  Also, the subscription service is not for
+            using the software - it is free, afterall - but for using the software installation on this very server.
+        </p>
+
+        <p>
+            Renting the server and maintaining it is extra work, and I intend to compensate this a little with a paid
+            subscription service.
+        </p>
+
+        <p>
+            How this will look in detail and what additional services I can offer to subscribers, I cannot tell right now.
+            I am developing this in my copious spare time and things take time.
+            So, stay tuned!
+        </p>
+    </div>
+</div>
