Added cookie policy etc

--- a/backend/public/html/faq.html
+++ b/backend/public/html/faq.html
@@ -1,22 +1,213 @@
 <div class="container" style="padding-top:200px; padding-bottom:200px">
+
     <div class="row">
-        <h1 class="text-center" style="margin-bottom:25px">
+        <h1 style="margin-bottom:25px">
             <img src="img/logo_small.png" alt="OOREP">
             &mdash;
             Frequently Asked Questions and Answers (FAQ)
         </h1>
+    </div>
 
-        <h2>What OOREP is and what it isn't</h2>
+    <div class="row" style="padding-top:50px">
+        <h2>GENERAL</h2>
+    </div>
 
-        <h2>Intellectual property</h2>
+    <hr class="col-xs-12" />
 
-        <h2>Misc.</h2>
+    <div class="row">
+        <h3>What is OOREP?</h3>
+        <p>
+            OOREP is an open online homeopathic repertorisation system, in that it is open source
+            software and only requires a web browser to run.
+        </p>
 
-        <h3>Costs</h3>
+        <p>
+            That is, if you don't like this web page, or would like to change something in the program, you
+            can download its source code, edit it, compile it and run your own server.  If you don't know how
+            to do that, feel free to use this very server that you are on, which I have provided for your
+            convenience.
+        </p>
 
-        <h3>Cookie and privacy policy</h3>
-
-        <h3>Contact</h3>
+        <p>
+            OOREP was written primarily for people who are familiar with the term (homeopathic) repertorisation,
+            such as professionals or students of homeopathy, but also interested laypersons like myself.  It is
+            not, however, a (professional) medicinal software for storing any kind of patient data or for
+            obtaining medical analysis of any sorts!  <b>Consider OOREP as a training tool only!</b>  It is not
+            a medical recommendation or treatment tool or intended to replace the visit of a doctor or the like.
+            See also the disclaimer at the bottom of this page.
+        </p>
 
     </div>
+
+    <div class="row">
+        <h3>What is repertorisation?</h3>
+
+        <p>
+            Loosely speaking, repertorisation is the process of looking up categories in homeopathic repertory
+            books.  These books have been around almost as long as homeopathy itself and are intended to help
+            homeopathic practitioners finding homeopathic remedies.  Online or software-based repertorisation
+            aims at automating this look-up process so as to be more efficient.  It does, however, not provide
+            any information or recommendations, which the underlying sources (i.e., the homeopathic repertory
+            books) don't provide.
+        </p>
+    </div>
+
+    <div class="row">
+        <h3>Why yet another homeopathic software?</h3>
+
+        <p>
+            There are indeed very good and mature homeopathic programs out there which exceed OOREP by far.  However,
+            these all suffer from one or both of the following problems: 1. they are extremely expensive (especially,
+            if you like me do not make a living from homeopathic repertorisation), and 2. they are platform-specific,
+            meaning, they require a certain version of operating system and/or require the license key to be installed
+            on a specific machine, etc., which can be a practical challenge or at least inconvenience.
+        </p>
+
+        <p>
+            OOREP was written to be easily accessible by anybody with an interest in and understanding of homeopathy.
+            As such it doesn't offer the same advanced features that the commercial homeopathy programs do.
+            Assisted or automated repertorisation, however, which is the key feature of any such homeopathy program,
+            is offered, even including multiple repertories.
+        </p>
+
+        <p>
+            The repertories, however, are not all offered for free - partly due to intellectual property reasons,
+            partly because I intend to offer additional services around OOREP later on - which will, however, not
+            affect this free-to-use installation of OOREP.  The commercial services are intended to help me pay for
+            server rental, etc.  See also the pricing section on this server for more information regarding this
+            topic.
+        </p>
+    </div>
+
+    <div class="row" style="padding-top:50px">
+        <h2>INTELLECTUAL PROPERTY</h2>
+    </div>
+
+    <hr class="col-xs-12" />
+
+    <div class="row">
+        <h3>Who wrote OOREP?</h3>
+    </div>
+
+    <div class="row">
+        <p>
+            OOREP was written by <a href="http://baueran.multics.org/">Andreas Bauer</a> (see also contacts section
+            at the bottom of this site) in his copious spare time.  It is written using Scala.Js, Play, and PostgreSQL and its
+            source code can be freely obtained from its git repository.  It is published under the GNU General Public
+            License and comes with no warranty, no guarantees, not even fitness for a particular purpose.
+        </p>
+    </div>
+
+    <div class="row">
+        <h3>What repertories do you use?</h3>
+    </div>
+
+    <div class="row">
+        <p>
+            Right now, I serve on this very server 7 different repertories, including Kent's and Hering's.  However,
+            these are not part of OOREP itself, but merely of this installation of it.  OOREP runs fine with only
+            those repertories that are hosted in its git repository.  Moreover, everyone with technical expertise
+            can add their own repositories, run their own OOREP installation sites and charge for this very service -
+            so long as OOREPs source code and potential changes to it remain publicly available under the GNU
+            General Publice license.
+        </p>
+
+        <p>
+            As such, I also reserve the right to not publish some of my repertories via OOREP's git repository and
+            to offer access to them
+            only for a small service fee, which is to be determined.  The fee is intended to help me cover the costs
+            of offering and maintaining this free site to the public.
+        </p>
+
+        <p>
+            To those, who do not want to pay a service fee, there will always be access to the reduced set of
+            repertories, which can also be downloaded via OOREP's git repository.
+        </p>
+
+        <p>
+            The respective repertory information can be obtained via the repertory menu.  Note that not all of them
+            are free or copyright-less (like Kent's or Hering's), which is another reason why I cannot provide them
+            for download.  All repertories, however, free or not, have been used either with friendly permission,
+            under a public license, or been obtained from manual conversion from public sources such as historic book
+            scans.
+        </p>
+        <p>
+            As an example: it took me two weeks full-time work to extract Hering's repertory from online resources.  And
+            while Hering's repertory is copyright-free, I have right now no plans of publishing the transcribed information
+            on the git repository.  Please check the git repository yourself, in order to find out which repertories are
+            accompanied by OOREPs source and which are only available to be used on this very site.
+        </p>
+    </div>
+
+    <div class="row">
+        <h3>Any plans to offer the modern/big repertories like Synthesis or Murphy?</h3>
+    </div>
+
+    <div class="row">
+        <p>
+            Yes, I'd love to.  I have spoken to Roger Zandvoort at some point about it, but due to the limited
+            amount of time I can invest in OOREP, I have no concrete plans as of yet.
+        </p>
+    </div>
+
+    <div class="row">
+        <h3>Who made the graphics on this web site?</h3>
+    </div>
+
+    <div class="row">
+        <p>
+            Right now, unless otherwise stated, graphics (incl. logo) are made by <a href="http://baueran.multics.org/">Andreas Bauer</a>
+            or are taken from
+            <a href="https://pixabay.com/">Pixabay</a> and used without attribution, where allowed.  For
+            further copyright information, please refer to OOREP's git repository.
+        </p>
+    </div>
+
+    <div class="row" style="padding-top:50px">
+        <h2>OTHER</h2>
+    </div>
+
+    <hr class="col-12" />
+
+    <div class="row">
+        <h3>How does registration/login work?</h3>
+    </div>
+
+    <div class="row">
+        <p>
+        As the above answers already indicate, what you see here is an early-preview of OOREP.  Registration is currently disabled in this phase
+        and login only possible for selected beta-testers, so to speak.  Sorry, for the inconvenience.
+        </p>
+    </div>
+
+    <div class="row">
+        <h3>How much does OOREP cost?</h3>
+    </div>
+
+    <div class="row">
+        <p>
+        OOREP is free and always will be!  However, there will be a paid service subscription model on this web site, which you
+        may or may not use in the future.  See also the pricing section on this site.
+        </p>
+    </div>
+
+
+    <div class="row">
+        <h3>Do you have a cookie and privacy policy?</h3>
+    </div>
+
+    <div class="row">
+        <p>
+            Please see the cookie policy link at the bottom of this site.
+        </p>
+    </div>
+
+    <div class="row">
+        <h3>Who do I contact and where may I get support from?</h3>
+    </div>
+
+    <div class="row">
+        <p>Please see the contact link at the bottom of this site.</p>
+    </div>
+
 </div>
