--- a/backend/public/html/pricing.html
+++ b/backend/public/html/pricing.html
@@ -5,7 +5,9 @@
             &mdash;
             Pricing
         </h1>
+    </div>
 
+    <div class="row" style="padding-top:50px">
         <p>
             OOREP is free software (for details, see also the FAQ) and as such, everyone can check out its git
             repository, run or modify the code.
