--- a/backend/public/html/index.html
+++ b/backend/public/html/index.html
@@ -28,7 +28,7 @@
     <!-- Include Scala.js compiled code -->
     <!-- <script type="text/javascript" src="../../../frontend/target/scala-2.12/frontend-jsdeps.js"></script> -->
     <!-- <script type="text/javascript" src="../../../frontend/target/scala-2.12/frontend-fastopt.js"></script> -->
-    <script type="text/javascript" src="http://localhost:9000/assets/javascripts/frontend-pub-fastOpt.js"></script>
+    <script type="text/javascript" charset="ISO-8859-1" src="http://localhost:9000/assets/javascripts/frontend-pub-fastOpt.js"></script>
 
   </body>
 </html>
