--- a/backend/public/html/private/index.html
+++ b/backend/public/html/private/index.html
@@ -31,7 +31,7 @@
     <!-- Include Scala.js compiled code -->
     <!--<script type="text/javascript" src="../../../sec_frontend/target/scala-2.12/frontend-jsdeps.js"></script>-->
     <!--<script type="text/javascript" src="../../../sec_frontend/target/scala-2.12/frontend-fastopt.js"></script>-->
-    <script type="text/javascript" src="http://localhost:9000/assets/javascripts/frontend-priv-fastOpt.js"></script>
+    <script type="text/javascript" charset="ISO-8859-1" src="http://localhost:9000/assets/javascripts/frontend-priv-fastOpt.js"></script>
 
   </body>
 </html>
