--- a/backend/public/html/contact.html
+++ b/backend/public/html/contact.html
@@ -1,24 +1,37 @@
 <div class="container" style="padding-top:200px; padding-bottom:200px">
 
-    <div class="row">
-        <h1 style="margin-bottom:25px">
-            <img src="img/logo_small.png" alt="OOREP">
-            &mdash;
-            Contact
-        </h1>
-    </div>
+  <div class="col">
+    <h1 style="margin-bottom:25px">
+      <img src="img/logo_small.png" alt="OOREP">
+      <br>
+      Contact
+    </h1>
+  </div>
+  
+  <div class="col"><hr></div>
 
-    <div class="row" style="padding-top:50px">
-        <p>
-            OOREP was written by <a href="http://baueran.multics.org/">Andreas Bauer</a>.
-            He also runs and maintains this server, which hosts an installed instance of
-            OOREP for your convenience.
-        </p>
+  <div class="col">
+    <p>
+      OOREP is free software and was written
+      by <a href="http://baueran.multics.org/">Andreas Bauer</a>.  I,
+      Andreas Bauer, also run and maintain this server, which hosts
+      an installed instance of OOREP for your convenience; that is, it
+      saves you from setting up an OOREP instance on your own.
+    </p>
+    
+    <p>
+      I can be contacted under the following address: Andreas Bauer,
+      Veilchenstr. 3, 86438 Kissing, Germany.  Or, more conveniently,
+      you can write me an email at baueran@gmail.com.
+    </p>
 
-        <p>
-            He can be contacted under the following address: Andreas Bauer, Veilchenstr. 3, 86438 Kissing, Germany.
-            Or, more conveniently, you can write to him an email at baueran@gmail.com.
-        </p>
-    </div>
-
+    <p>
+      <b>Before writing to me:</b> Please also take note of the
+      information provided in the disclaimer at the bottom of this
+      page as well as the FAQ and privacy policy before contacting me
+      about any issues that you may have!  Also, I do not offer any
+      kind of user support or assistance in using this web site.
+    </p>
+  </div>
+  
 </div>
