Beautify, add flag icons and privacy policy

--- a/backend/public/html/datenschutz.html
+++ b/backend/public/html/datenschutz.html
@@ -4,7 +4,7 @@
     <h1 style="margin-bottom:25px">
       <img src="img/logo_small.png" alt="OOREP">
       <br>
-      Privacy Policy &amp; Cookies
+      Datenschutzerklärung
     </h1>
   </div>
   
@@ -85,7 +85,7 @@
   </div>
 
   <div class="col text-center">
-    <a href="datenschutz.html"><img src="img/germanflag.png" alt="Deutsche Version dieses Dokuments"></a>
+    <a href="cookies.html"><img src="img/englishflag.png" alt="English version of this document"></a>
   </div>
 
 </div>
