Add JS to privay policy links

--- a/backend/public/html/cookies.html
+++ b/backend/public/html/cookies.html
@@ -85,7 +85,7 @@
   </div>
 
   <div class="col text-center">
-    <a href="datenschutz.html"><img src="img/germanflag.png" alt="Deutsche Version dieses Dokuments"></a>
+    <a href="javascript:void(0)" onclick="$('#content').load('datenschutz.html')"><img src="img/germanflag.png" alt="Deutsche Version dieses Dokuments"></a>
   </div>
 
 </div>
