--- a/backend/public/html/datenschutz.html
+++ b/backend/public/html/datenschutz.html
@@ -85,7 +85,7 @@
   </div>
 
   <div class="col text-center">
-    <a href="cookies.html"><img src="img/englishflag.png" alt="English version of this document"></a>
+    <a href="javascript:void(0)" onclick="$('#content').load('cookies.html')"><img src="img/englishflag.png" alt="English version of this document"></a>
   </div>
 
 </div>
