Beautify more, add register.html dummy

--- a/backend/public/html/contact.html
+++ b/backend/public/html/contact.html
@@ -11,26 +11,40 @@
   <div class="col"><hr></div>
 
   <div class="col">
-    <p>
-      OOREP is free software and was written
+    <p style="text-align:justify;">
+      OOREP is free software in the sense of the GNU General Public
+      License (GPL) and was written from scratch
       by <a href="http://baueran.multics.org/">Andreas Bauer</a>.  I,
-      Andreas Bauer, also run and maintain this server, which hosts
-      an installed instance of OOREP for your convenience; that is, it
-      saves you from setting up an OOREP instance on your own.
+      Andreas Bauer, also run and maintain this server, which hosts an
+      installed instance of the OOREP software for your convenience;
+      that is, it saves you from setting up an OOREP software instance
+      on your own.
     </p>
     
-    <p>
-      I can be contacted under the following address: Andreas Bauer,
-      Veilchenstr. 3, 86438 Kissing, Germany.  Or, more conveniently,
-      you can write me an email at baueran@gmail.com.
+    <p style="text-align:justify;">
+      I can be contacted under the following address:
     </p>
 
-    <p>
+    <p style="text-align:justify;">
+      Andreas Bauer<br>
+      Veilchenstr. 3<br>
+      86438 Kissing<br>
+      Germany<br>
+    </p>
+
+    <p style="text-align:justify;">
+      Homepage: <a href="http://baueran.multics.org/">Andreas Bauer</a><br>
+      E-Mail: baueran@gmail.com
+    </p>
+
+    <p style="text-align:justify;">
       <b>Before writing to me:</b> Please also take note of the
       information provided in the disclaimer at the bottom of this
-      page as well as the FAQ and privacy policy before contacting me
-      about any issues that you may have!  Also, I do not offer any
-      kind of user support or assistance in using this web site.
+      page as well as the FAQ and the privacy policy before contacting
+      me about any issues that you may have!  Also, I do not offer any
+      kind of user support or assistance in using this web site that
+      exceeds what is mentioned in the privacy policy.  I simply do
+      not have the time.
     </p>
   </div>
   
