--- a/backend/public/html/cookies.html
+++ b/backend/public/html/cookies.html
@@ -38,17 +38,26 @@
     <h4>Use of cookies</h4>
 
     <p style="text-align:justify;">
-      In order to make your visit to our web site a pleasant one and
-      to offer certain features on it, we are using so-called cookies.
-      These are little text files, which will be saved on your
-      computer.  Some of these cookies will be deleted after you close
-      your web browser (so-called session cookies).  Others remain on
-      your computer and enable us to recognise your browser next time
-      you visit this site.  You can configure your browser in such a
-      way that you will be either informed about cookies that are to
-      be stored on your computer, or disable their storing completely.
-      In the latter case, however, certain features on this web site
-      might not work as intended.
+      This web site does <b>not</b> use any cookies, Google Analytics
+      or other trackers, except for the storing of meta-data in
+      logfiles as mentioned above.  Cookies will be necessary in the
+      future, when this web site allows users to register and to log
+      in.  In this case, however, you as a user will have to first
+      read and accept a dedicated terms of service document for this
+      web site.  That is, the anonymous visit of this web site will in
+      the future always be possible without this web site storing any
+      cookies on your browsing device.
+      <!-- In order to make your visit to our web site a pleasant one and -->
+      <!-- to offer certain features on it, we are using so-called cookies. -->
+      <!-- These are little text files, which will be saved on your -->
+      <!-- computer.  Some of these cookies will be deleted after you close -->
+      <!-- your web browser (so-called session cookies).  Others remain on -->
+      <!-- your computer and enable us to recognise your browser next time -->
+      <!-- you visit this site.  You can configure your browser in such a -->
+      <!-- way that you will be either informed about cookies that are to -->
+      <!-- be stored on your computer, or disable their storing completely. -->
+      <!-- In the latter case, however, certain features on this web site -->
+      <!-- might not work as intended. -->
     </p>
     
     <h4>SSL encryption</h4>
