--- a/backend/public/html/datenschutz.html
+++ b/backend/public/html/datenschutz.html
@@ -34,20 +34,29 @@
     <h4>Verwendung von Cookies</h4>
 
     <p style="text-align:justify;">
-      Um den Besuch unserer Website attraktiv zu gestalten und die
-      Nutzung bestimmter Funktionen zu ermöglichen, verwenden wir auf
-      verschiedenen Seiten sogenannte Cookies. Hierbei handelt es sich
-      um kleine Textdateien, die auf Ihrem Endgerät gespeichert
-      werden. Einige der von uns verwendeten Cookies werden nach Ende
-      der Browser-Sitzung, also nach Schließen Ihres Browsers, wieder
-      gelöscht (sog. Sitzungs-Cookies). Andere Cookies verbleiben auf
-      Ihrem Endgerät und ermöglichen uns, Ihren Browser beim nächsten
-      Besuch wiederzuerkennen (persistente Cookies). Sie können Ihren
-      Browser so einstellen, dass Sie über das Setzen von Cookies
-      informiert werden und einzeln über deren Annahme entscheiden
-      oder die Annahme von Cookies für bestimmte Fälle oder generell
-      ausschließen. Bei der Nichtannahme von Cookies kann die
-      Funktionalität unserer Website eingeschränkt sein.
+      Diese Webseite verwendet standardmäßig <b>keinerlei</b> Cookies,
+      Google Analytics oder sonstige Tracker außer den oben genannten
+      Logfiles zur Metadatenauswertung.  Cookies werden in der Zukunft
+      einmal verwendet werden, wenn die Webseite es Benutzern erlaubt,
+      sich zu registrieren und einzuloggen.  In diesem Fall jedoch
+      müssen Sie als Benutzer vorher ohnehin explizit den allgemeinen
+      Geschäftsbedingungen zustimmen.  D.h., der anonyme Besuch dieser
+      Webseite wird auch in Zukunft weiterhin komplett ohne Cookies
+      möglich bleiben.
+      <!-- Um den Besuch unserer Website attraktiv zu gestalten und die -->
+      <!-- Nutzung bestimmter Funktionen zu ermöglichen, verwenden wir auf -->
+      <!-- verschiedenen Seiten sogenannte Cookies. Hierbei handelt es sich -->
+      <!-- um kleine Textdateien, die auf Ihrem Endgerät gespeichert -->
+      <!-- werden. Einige der von uns verwendeten Cookies werden nach Ende -->
+      <!-- der Browser-Sitzung, also nach Schließen Ihres Browsers, wieder -->
+      <!-- gelöscht (sog. Sitzungs-Cookies). Andere Cookies verbleiben auf -->
+      <!-- Ihrem Endgerät und ermöglichen uns, Ihren Browser beim nächsten -->
+      <!-- Besuch wiederzuerkennen (persistente Cookies). Sie können Ihren -->
+      <!-- Browser so einstellen, dass Sie über das Setzen von Cookies -->
+      <!-- informiert werden und einzeln über deren Annahme entscheiden -->
+      <!-- oder die Annahme von Cookies für bestimmte Fälle oder generell -->
+      <!-- ausschließen. Bei der Nichtannahme von Cookies kann die -->
+      <!-- Funktionalität unserer Website eingeschränkt sein. -->
     </p>
     
     <h4>SSL-Verschlüsselung</h4>
