--- a/backend/public/html/impressum.html
+++ b/backend/public/html/impressum.html
@@ -116,6 +116,7 @@
       <li>Hahnemann Büste: Extrahiert aus einem <a href="https://commons.wikimedia.org/wiki/File:David_d%27Angers_-_Samuel_Hahnemann_bust.jpg">Bild</a> der Büste von David d'Angers (1788-1856)</li>
       <li>Wassertropfen: <a href="https://pixabay.com/photos/drops-of-water-water-liquid-fresh-578897/">Pixabay</a></li>
       <li>Englische Fahne: <a href="https://www.iconfinder.com/icons/16014/england_english_flag_great_britain_inghilterra_italia_uk_united_kingdom_icon">Iconfinder</a></li>
+      <li>Apotheke: <a href="https://pixabay.com/photos/pharmacy-antique-old-chemicals-3377670/">Pixabay</a></li>
     </ul>
 
     <p style="text-align:justify;">
