--- a/backend/public/html/register.html
+++ b/backend/public/html/register.html
@@ -20,21 +20,16 @@
 <body class="text-center">
 
 <div style="width:100%; margin-bottom:100px;" class="text-center">
-    <form class="form-signin" action="http://localhost:9000/login" method="POST">
-      <a href="http://localhost:9000"><img src="img/logo_small.png"></a>
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox mb-3">
-            <label><input type="checkbox" value="remember-me"> Remember me</label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <p class="mt-5 mb-3 text-muted">
-            <a href="#">Forgot your username or password?</a>
-        </p>
-    </form>
+  <a href="http://localhost:9000"><img src="img/logo_small.png"></a>
+  <h1 class="h3 mb-5 font-weight-normal" style="padding-top:30px;">Registration currently not possible!</h1>
+  
+  <p class="mt-8 mb-5 text-muted">
+    <img src="img/pharmacy-3377670_640.jpg">
+  </p>
+  
+  <p class="mt-8 mb-5 text-muted">
+    <b><a href="http://localhost:9000">Go back to main page instead!</a></b>
+  </p>
 </div>
 
 </body>
