--- a/backend/public/html/login.html
+++ b/backend/public/html/login.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="http://localhost:9000/assets/html/third-party/bootstrap-4.1.3/css/bootstrap.min.css">
-    <script src="http://localhost:9000/assets/html/third-party/jquery-3.3.1.min.js"></script>
-    <script src="http://localhost:9000/assets/html/third-party/popper.min.js"></script>
-    <script src="http://localhost:9000/assets/html/third-party/bootstrap-4.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="http://localhost:9000/assets/html/mystyle.css">
-    <link rel="stylesheet" href="http://localhost:9000/assets/html/signin.css">
+    <link rel="stylesheet" href="/assets/html/third-party/bootstrap-4.1.3/css/bootstrap.min.css">
+    <script src="/assets/html/third-party/jquery-3.3.1.min.js"></script>
+    <script src="/assets/html/third-party/popper.min.js"></script>
+    <script src="/assets/html/third-party/bootstrap-4.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/assets/html/mystyle.css">
+    <link rel="stylesheet" href="/assets/html/signin.css">
 
     <title>OOREP &mdash; Login</title>
 </head>
@@ -20,8 +20,8 @@
 <body class="text-center">
 
 <div style="width:100%; margin-bottom:100px;" class="text-center">
-    <form class="form-signin" action="http://localhost:9000/login" method="POST">
-      <a href="http://localhost:9000"><img src="img/logo_small.png"></a>
+    <form class="form-signin" action="/login" method="POST">
+      <a href="/assets/html/index.html"><img src="img/logo_small.png"></a>
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required>
