--- a/backend/public/html/private/index.html
+++ b/backend/public/html/private/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="http://localhost:9000/assets/html/third-party/bootstrap-4.1.3/css/bootstrap.min.css">
-    <script src="http://localhost:9000/assets/html/third-party/jquery-3.3.1.min.js"></script>
-    <script src="http://localhost:9000/assets/html/third-party/popper.min.js"></script>
-    <script src="http://localhost:9000/assets/html/third-party/bootstrap-4.1.3/js/bootstrap.min.js"></script>
-    <link  rel="stylesheet" href="http://localhost:9000/assets/html/third-party/open-iconic-master/font/css/open-iconic-bootstrap.css">
-    <link rel="stylesheet" href="http://localhost:9000/assets/html/private/mystyle.css">
+    <link rel="stylesheet" href="/assets/html/third-party/bootstrap-4.1.3/css/bootstrap.min.css">
+    <script src="/assets/html/third-party/jquery-3.3.1.min.js"></script>
+    <script src="/assets/html/third-party/popper.min.js"></script>
+    <script src="/assets/html/third-party/bootstrap-4.1.3/js/bootstrap.min.js"></script>
+    <link  rel="stylesheet" href="/assets/html/third-party/open-iconic-master/font/css/open-iconic-bootstrap.css">
+    <link rel="stylesheet" href="/assets/html/private/mystyle.css">
 
     <title>OOREP &mdash; open online homeopathic repertorisation</title>
   </head>
@@ -31,7 +31,7 @@
     <!-- Include Scala.js compiled code -->
     <!--<script type="text/javascript" src="../../../sec_frontend/target/scala-2.12/frontend-jsdeps.js"></script>-->
     <!--<script type="text/javascript" src="../../../sec_frontend/target/scala-2.12/frontend-fastopt.js"></script>-->
-    <script type="text/javascript" charset="ISO-8859-1" src="http://localhost:9000/assets/javascripts/frontend-priv-fastOpt.js"></script>
+    <script type="text/javascript" charset="ISO-8859-1" src="/assets/javascripts/frontend-priv-fastOpt.js"></script>
 
   </body>
 </html>
