fix some broken links

--- a/backend/public/html/datenschutz.html
+++ b/backend/public/html/datenschutz.html
@@ -94,7 +94,7 @@
   </div>
 
   <div class="col text-center">
-    <a href="javascript:void(0)" onclick="$('#content').load('cookies.html')"><img src="img/englishflag.png" alt="English version of this document"></a>
+    <a href="javascript:void(0)" onclick="$('#content').load('/assets/html/cookies.html')"><img src="/assets/html/img/englishflag.png" alt="English version of this document"></a>
   </div>
 
 </div>
