--- a/backend/public/html/cookies.html
+++ b/backend/public/html/cookies.html
@@ -93,7 +93,7 @@
   </div>
 
   <div class="col text-center">
-    <a href="javascript:void(0)" onclick="$('#content').load('datenschutz.html')"><img src="img/germanflag.png" alt="Deutsche Version dieses Dokuments"></a>
+    <a href="javascript:void(0)" onclick="$('#content').load('/assets/html/datenschutz.html')"><img src="/assets/html/img/germanflag.png" alt="Deutsche Version dieses Dokuments"></a>
   </div>
 
 </div>
