--- a/backend/public/html/private/index.html
+++ b/backend/public/html/private/index.html
@@ -12,7 +12,7 @@
     <script src="/assets/html/third-party/popper.min.js"></script>
     <script src="/assets/html/third-party/bootstrap-4.1.3/js/bootstrap.min.js"></script>
     <link  rel="stylesheet" href="/assets/html/third-party/open-iconic-master/font/css/open-iconic-bootstrap.css">
-    <link rel="stylesheet" href="/assets/html/private/mystyle.css">
+    <link rel="stylesheet" href="/assets/html/mystyle.css">
 
     <title>OOREP &mdash; open online homeopathic repertorisation</title>
   </head>
