beautify freetext headings

--- a/backend/public/html/pricing.html
+++ b/backend/public/html/pricing.html
@@ -5,9 +5,7 @@
   </div>
 
   <div class="col">
-    <h2 style="margin-bottom:25px; margin-top: 50px;">
-      Pricing
-    </h2>
+    <h2 class="freetext">Pricing</h2>
   </div>
 
   <div class="col">
