--- a/backend/public/html/contact.html
+++ b/backend/public/html/contact.html
@@ -1,14 +1,12 @@
 <div class="container" style="padding-top:200px; padding-bottom:200px">
 
   <div class="col">
-    <h1 style="margin-bottom:25px">
       <img src="img/logo_small.png" alt="OOREP">
-      <br>
-      Contact
-    </h1>
   </div>
-  
-  <div class="col"><hr></div>
+
+  <div class="col">
+    <h2 class="freetext">Contact</h2>
+  </div>
 
   <div class="col">
     <p style="text-align:justify;">
