replace I with we everywhere

--- a/backend/public/html/contact.html
+++ b/backend/public/html/contact.html
@@ -11,16 +11,15 @@
   <div class="col">
     <p style="text-align:justify;">
       OOREP is free software in the sense of the GNU General Public
-      License (GPL) and was written from scratch
-      by <a href="http://baueran.multics.org/">Andreas Bauer</a>.  I,
-      Andreas Bauer, also run and maintain this server, which hosts an
-      installed instance of the OOREP software for your convenience;
-      that is, it saves you from setting up an OOREP software instance
-      on your own.
+      License (short: GPL) and was written from scratch
+      by <a href="http://baueran.multics.org/">Andreas Bauer</a>.  He
+      also runs and maintains this server, which hosts an installed
+      instance of the OOREP software for your convenience; that is, it
+      saves you from setting up an OOREP software instance on your own.
     </p>
     
     <p style="text-align:justify;">
-      I can be contacted under the following address:
+      He can be contacted under the following address:
     </p>
 
     <p style="text-align:justify;">
@@ -36,12 +35,12 @@
     </p>
 
     <p style="text-align:justify;">
-      <b>Before writing to me:</b> Please also take note of the
+      <b>Before writing to him:</b> Please also take note of the
       information provided in the disclaimer at the bottom of this
       page as well as the FAQ and the privacy policy before contacting
-      me about any issues that you may have!  Also, I do not offer any
+      me about any issues that you may have!  Also, he does not offer any
       kind of user support or assistance in using this web site that
-      exceeds what is mentioned in the privacy policy.  I simply do
+      exceeds what is mentioned in the privacy policy.  He simply does
       not have the time.
     </p>
   </div>
