--- a/backend/public/html/login.html
+++ b/backend/public/html/login.html
@@ -22,7 +22,7 @@
 <div style="width:100%; margin-bottom:100px;" class="text-center">
     <form class="form-signin" action="/login" method="POST">
       <a href="/assets/html/index.html"><img src="img/logo_small.png"></a>
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <h2 class="freetext">Please sign in</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required>
         <label for="inputPassword" class="sr-only">Password</label>
