add and use Linux Libertine Display fonts

--- a/backend/public/html/impressum.html
+++ b/backend/public/html/impressum.html
@@ -116,6 +116,12 @@
       Urheberrechten.
     </p>
 
+    <h3 class="freetext">Schriften</h3>
+
+    <ul>
+      <li>Linux Libertine Display: <a href="https://en.wikipedia.org/wiki/Linux_Libertine">Philipp H. Poll</a></li>
+    </ul>
+
     <h3 class="freetext">Repertorien</h3>
 
     <p style="text-align:justify;">
