--- a/backend/public/html/contact.html
+++ b/backend/public/html/contact.html
@@ -38,7 +38,7 @@
       <b>Before writing to him:</b> Please also take note of the
       information provided in the disclaimer at the bottom of this
       page as well as the FAQ and the privacy policy before contacting
-      me about any issues that you may have!  Also, he does not offer any
+      him about any issues that you may have!  Also, he does not offer any
       kind of user support or assistance in using this web site that
       exceeds what is mentioned in the privacy policy.  He simply does
       not have the time.
