change to prod-mode; minor pre-publication adjustments

--- a/backend/public/html/faq.html
+++ b/backend/public/html/faq.html
@@ -32,14 +32,14 @@
 		OOREP was written primarily for people who are familiar with
 		the term (homeopathic) repertorisation, such as professionals
 		or students of homeopathy, but also and in particular for interested
-		laypersons with merely a personal interest in homeopathy (like
+		laypersons with merely a private interest in homeopathy (like
 		the author of this software).  It is not, however, a
 		(professional) medicinal software for storing any kind of
 		sensitive patient data or for obtaining	medical analyses of any
-		sorts.  <b>Consider OOREP as a training and exploratory tool
-		only!</b>  It is not intended to and cannot replace the visit
-		of a doctor/GP or in case of an illness.  See also the disclaimer
-		at the bottom of this page!
+		sorts.  <b>Consider OOREP as an electronic look-up tool only!</b>
+		It is not intended to and cannot replace the visit of a doctor/GP
+		in case of an illness.  See also the disclaimer at the bottom
+		of this page!
     </p>
 
     <h5 class="freetext">&bull; What is repertorisation?</h5>
@@ -50,12 +50,12 @@
 		been around for almost as long as homeopathy itself and are
 		intended to help homeopathic practitioners select homeopathic
 		remedies.  Online or in general software-based repertorisation
-		aims at automating this look-up process so as to be more
-		efficient.  It does, however, not provide any information or
-		recommendations, which the underlying sources (i.e., the
-		homeopathic repertory books) don't provide.  So, in abstract
-		terms you can think of repertorisation as the electronic
-		searching in homeopathy books.
+		aims at making this look-up process more efficient.
+		It does, however, not provide any information or recommendations,
+		which the underlying sources (i.e., the	homeopathic repertory
+		books) don't already provide.  So, in abstract terms you can
+		think of online/electronic repertorisation as the efficient
+		searching through homeopathy books.
     </p>
 
     <h5 class="freetext">&bull; Why yet another homeopathic software?</h5>
@@ -76,12 +76,12 @@
       
     <p style="text-align:justify;">
 		OOREP was written to be easily accessible by anybody with an
-		interest in and basic understanding of homeopathy.  As such it
-		doesn't offer the same advanced features that the commercial
-		homeopathy programs do.  Assisted repertorisation, however,
-		which is <emph>the</emph> key feature of any such homeopathy
-		program, is offered, even including multiple different
-		repertories.
+		interest in and basic understanding of homeopathic
+		repertorisation.  As such it doesn't offer the same advanced
+		features that the commercial homeopathy programs do.  Automated
+		repertorisation, however, which is <emph>the</emph> key feature
+		of any such homeopathy program, is offered, even including
+		multiple different repertories.
     </p>
 
   </div>
