--- a/backend/public/html/index.html
+++ b/backend/public/html/index.html
@@ -22,7 +22,7 @@
     <!-- Include Scala.js compiled code -->
     <!-- <script type="text/javascript" src="../../../frontend/target/scala-2.12/frontend-jsdeps.js"></script> -->
     <!-- <script type="text/javascript" src="../../../frontend/target/scala-2.12/frontend-fastopt.js"></script> -->
-    <script type="text/javascript" charset="ISO-8859-1" src="/assets/javascripts/frontend-pub-fastOpt.js"></script>
+    <script type="text/javascript" charset="ISO-8859-1" src="/assets/frontend-opt.js"></script>
 
   </body>
 </html>
